fixes z-index-problem

--- a/modules/weblounge-ui/src/main/resources/editor/menubar/menubar.css
+++ b/modules/weblounge-ui/src/main/resources/editor/menubar/menubar.css
@@ -9,7 +9,7 @@
 	width: 100%;
 	padding-left: 20px;
 	overflow: hidden;
-	z-index: 400;
+	z-index: 420;
 }
 
 #wbl-pageletcreator {
